bpo-41366: Fix clang warning for sign conversion

Affects 3.9 beta and master